2003-09-18  William A. Perkins  <william.perkins@pnl.gov>

	* mass2_main_025.f90 (fillghost_hydro): incorrect indexing of
	1-to-many connection fixed.
	(fillghost_scalar): ditto

2003-07-17  William A. Perkins  <william.perkins@pnl.gov>

	* block_bc_module.f90: more diagnostics on block connection errors

	* scalar_mass_balance.f90: when only computing mass, delta is
	zero, do not divide by zero

	* sediment_source.f90 (sediment_parse_options): erosion and
	deposition were allocated with the wrong lower bound indices

	* particulate_source.f90 (part_parse_options): bedexch was
	allocated with the wrong lower bound indices.

2003-05-20  William A. Perkins  <william.perkins@pnl.gov>

	* test/benchmark/jda/gage_control.dat: add some gages to compare

	* mass2_main_025.f90: reference to global 'iblock' removed in
	fillghost_hydro 

2003-05-16  William A. Perkins  <william.perkins@pnl.gov>

	* misc_vars_module.f90: filenames too short for SAC runs

	* transport_only_module.f90: filenames too short for SAC runs

	* test: change all of the configuration files because of
	bed_iterations (there has got to be a better way)

	* mass2_main_025.f90: read bed_iterations from the config file on
	the bed line

	* bed.f90: use bed source flow to advect pore contaminant into the
	water column; iterate the computation of bed pore/water column
	interaction 

	* scalars_source.f90: interpolate bed source flow if it has been
	specified 

	* bed_source.f90: add global variables to hold bed source flow
	data 

	* generic_source.f90: add BEDFLOW keyword

2003-05-15  William A. Perkins  <william.perkins@pnl.gov>

	* test/sediment/Makefile: included beddecay

	* test/sediment/beddecay: Updated test case with Makefile

	* scalars_source.f90: use explicitly calculated bed pore exchange

	* generic_source.f90: bed pore exchange is now handled completely
	in the bed module

	* bed.f90: diffusive flux between bed and water column is now
	handled explicitly 
